# intellacc.com

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  DRYmessages.md  GEMINI.md  Intellacc - monospace.odg  Intellacc - tufte.odg  Intellacc Feature Roadmap.md  LICENSE  README.md  SOLID_MIGRATION_PLAN.md  agent.md  authn-plan.md  backlog.md  benchmark.md  docker-compose-cron.yml  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.federation.yml  docker-compose.local.yml  docker-compose.solid-local.yml  docker-compose.yml  e2ee-next-steps.md  edit-profile-button-plan.md  forgot-pw.md  get-heights.js  mcp-server.py  meta_gpt5_results_20250827_003357.csv  mls-diagnosis.md  mls-wasm-concurrency-bug.md  mobile-pwa-plan.md  next-steps.md  openmls-implementation-plan.md  openmls-persistence.md  package-lock.json  package.json  plan.md.old  playwright.config.js  production-checklist.md  (+9 more)
.claude/: settings.json
.claude/agents/: architect.md  backend.md  code-reviewer.md  data.md  devops.md  e2ee.md  engine.md  frontend.md  orchestrator.md  test.md
.claude/commands/: architect.md  backend.md  data.md  devops.md  e2ee.md  engine.md  frontend.md  orchestrator.md  test.md
backend/: .dockerignore  .env.push.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.postgres  Moderne.json  _1.env  check-backend.sh  docker-compose.yml  jest.config.js  package-lock.json  package.json  refactor.js  test_heavy.js  transform.js
cli/: go.mod  intellacc.js  main.go  package.json  test.mjs
docs/: WEEKLY_ASSIGNMENT_CRON.md  agent-cli.md  architectural-suggestions.md  configuration.md  core-crypto-client-unification-plan.md  email-plan.md  feature-roadmap.md  federation-layer.md  hourly-sms-test-runbook.md  intellacc-e2ee-architecture.html  messaging-improvements.md  openclaw-whatsapp-bridge-extraction-plan.md  persuasive-alpha-v1-implementation-plan.md  phone-gateway-plan.md  refine-lite-draft.md  single-rounding-boundary.md  solid-unification-plan.md  strategy-and-vision.md  unified-backlog.md  verification-implementation-plan.md  verification-production-checklist.md  wire-messaging.md
frontend/: Dockerfile  Dockerfile.wscat  design.html  design.js  design.js.backup  design1.js  design2.js  docker-compose.yml  index.html  main.js  new-styles.css.bak  package-lock.json  package.json  setup-test-users.js  socket-client.js  styles-clean-new.css  styles-old.css  styles.css  test-van-bug.js  test-van-button.js  test-van-button2.js  test-van-button3.js  test-van-leaderboard.js  test-van.js  test.js  test_socket_auth.js  vite.config.js  vitest.config.js
frontend-solid/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
migrations/: 20250127_add_ledger_audit_system.sql  20250127_add_unique_index_user_shares.sql  20250127_convert_to_generated_columns.sql  20250727_add_market_updates_ledger_column.sql  20250727_add_users_ledger_columns.sql  20250727_sync_numeric_ledger_precision.sql  20250908_add_e2ee_signal_tables.sql  20260103_add_mls_group_info.sql  20260306_fix_lmsr_initialization.sql  20260307_refresh_ledger_audit_function.sql  add_side_specific_stakes.sql
openmls-wasm/: Cargo.toml  OpenMLS Book.txt
openmls-wasm/src/: lib.rs
plans/: tiered-verification.md
prediction-engine/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.stress  Dockerfile.test  docker-compose.test.yml  docker-compose.yml  run_stress_test.sh  run_stress_test_docker.sh  test_lmsr_integration.sh  test_lmsr_properties.sh
prediction-engine/src/: benchmark.rs  config.rs  database.rs  db_adapter.rs  integration_tests.rs  lib.rs  lmsr.rs  lmsr_api.rs  lmsr_core.rs  lmsr_multi_core.rs  main.rs  market_import.rs  metaculus.rs  numeric_transform.rs  resolution_sync.rs  stress.rs  tests.rs
scripts/: add_resolved_predictions.js  check-mls-dedup.sh  collect_console.js  daily_cron.js  dead-css-report.mjs  dev-stack.sh  import_cron.js  package.json  populate_database.js  pw.js  pw.sh  remove-dead-css.mjs  restart-playwright-mcp.sh  run_populate.sh  run_weekly_manual.sh  smoke-post-match.sh  solid-cutover-gate.sh  test_prediction_engine.sh  validate_topic_classification.mjs  weekly_cron.js
shared/: api-schema.json
(+746 files in other folders)
