[package]
name = "openmls-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
# OpenMLS dependencies
openmls = { version = "0.7.1", features = ["crypto-subtle", "js", "fork-resolution"] }
openmls_rust_crypto = "0.4.1"
openmls_basic_credential = "0.4.1"
openmls_traits = "0.4.1"
openmls_memory_storage = { version = "0.4.1", features = ["test-utils"] }
tls_codec = { version = "0.4.2", features = ["derive"] }
fluvio-wasm-timer = "0.2"
serde_json = "1.0.145"
bincode = "1.3"
argon2 = { version = "0.5", features = ["std"] }
hex = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = []
logging = []
panic-hook = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
